// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|AddDebateArgumentVoteMutation try to vote for an argument but already voted 1`] = `
Object {
  "addDebateArgumentVote": Object {
    "debateArgument": null,
    "errorCode": "ALREADY_VOTED",
  },
}
`;

exports[`Internal|AddDebateArgumentVoteMutation try to vote with wrong argument id 1`] = `
Object {
  "addDebateArgumentVote": Object {
    "debateArgument": null,
    "errorCode": "UNKNOWN_DEBATE_ARGUMENT",
  },
}
`;

exports[`Internal|AddDebateArgumentVoteMutation vote for an argument 1`] = `
Object {
  "addDebateArgumentVote": Object {
    "debateArgument": Object {
      "viewerHasVote": true,
      "votes": Object {
        "edges": Array [
          Object {
            "node": Object {
              "author": Object {
                "id": "VXNlcjp1c2VyNQ==",
              },
            },
          },
        ],
        "totalCount": 1,
      },
    },
    "errorCode": null,
  },
}
`;

exports[`Internal|RemoveDebateArgumentVoteMutation remove vote for an argument 1`] = `
Object {
  "removeDebateArgumentVote": Object {
    "debateArgument": Object {
      "viewerHasVote": false,
      "votes": Object {
        "totalCount": 0,
      },
    },
    "deletedDebateArgumentVoteId": null,
    "errorCode": null,
  },
}
`;

exports[`Internal|RemoveDebateArgumentVoteMutation try to remove nonexistent vote for an argument 1`] = `
Object {
  "removeDebateArgumentVote": Object {
    "debateArgument": null,
    "deletedDebateArgumentVoteId": null,
    "errorCode": "NOT_VOTED",
  },
}
`;

exports[`Internal|RemoveDebateArgumentVoteMutation try to remove vote with wrong argument id 1`] = `
Object {
  "removeDebateArgumentVote": Object {
    "debateArgument": null,
    "deletedDebateArgumentVoteId": null,
    "errorCode": "UNKNOWN_DEBATE_ARGUMENT",
  },
}
`;
